--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 	<head>
 		<title>Base Project</title>
-		
+		<link rel="stylesheet" type="text/css" href="stylesheet.css" />
+		<script src="script.js" type="text/javascript"></script>
 	</head>
+	<body>
+		<p>This is for future projects.</p>
+	</body>
 </html>
